[package]
name = "dpm-popui-e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui_extras = "0.21.0"

env_logger = "0.10"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#日期支持(必须)`
chrono = { version = "0.4", features = ["serde"] }
#log日志支持(必须)
log = "0.4"
thiserror = "1.0.38"
ureq = { version = "2.6.2", features = ["json"]}
url = "2.3.1"
strum = { version = "0.24", features = ["derive"] }
dotenv = "0.15.0"

tokio = { version = "1", features = ["full"] }